fix: hover jump on FF and minimal nav font weight

--- a/packages/components/src/components/app-footer/app-footer.css
+++ b/packages/components/src/components/app-footer/app-footer.css
@@ -54,6 +54,9 @@
   font-family: TeleNeoWeb;
   font-weight: 800;
 }
+.footer--variant-minimal .footer-navigation ul {
+  font-weight: 500;
+}
 
 .footer-navigation li a {
   display: flex;
@@ -74,6 +77,7 @@
 
 .footer--variant-standard .footer-navigation li a:hover span {
   border-bottom: 1px solid #fff;
+  margin-bottom: -1px;
 }
 
 .footer-navigation li a:active {
@@ -82,6 +86,7 @@
 
 .footer--variant-standard .footer-navigation li a:active span {
   border-bottom: 1px solid #cb0068;
+  margin-bottom: -1px;
 }
 
 .footer-navigation li a:active:focus {
